--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>加速度センサとデバイスの向き</title>
+  <!-- Include jQuery from CDN -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 <body>
   <h1>加速度センサとデバイスの向き</h1>
@@ -24,12 +26,12 @@
 
   <script>
     function startSensor() {
-      //. ユーザーに「許可」を求めるダイアログを表示
+      // ユーザーに「許可」を求めるダイアログを表示
       DeviceOrientationEvent.requestPermission().then(function (response) {
         if (response === 'granted') {
-          //. 許可された場合のみイベントハンドラを追加できる
+          // 許可された場合のみイベントハンドラを追加できる
           window.addEventListener("deviceorientation", deviceOrientation);
-          //. 画面上部のボタンを消す
+          // 画面上部のボタンを消す
           $('#sensorrequest').css('display', 'none');
         }
       }).catch(function (e) {
@@ -37,32 +39,32 @@
       });
     }
 
-    //. DeviceOrientationEvent オブジェクトが有効な環境か？　をチェック
+    // DeviceOrientationEvent オブジェクトが有効な環境か？ をチェック
     if (window.DeviceOrientationEvent) {
-      //. iOS13 以上であれば DeviceOrientationEvent.requestPermission 関数が定義されているので、ここで条件分岐
+      // iOS13 以上であれば DeviceOrientationEvent.requestPermission 関数が定義されているので、ここで条件分岐
       if (DeviceOrientationEvent.requestPermission && typeof DeviceOrientationEvent.requestPermission === 'function') {
-        //. iOS 13 以上の場合、
-        //. 画面上部に「センサーの有効化」ボタンを追加
+        // iOS 13 以上の場合、
+        // 画面上部に「センサーの有効化」ボタンを追加
         var banner = '<div  style="z-index: 1; position: absolute; width: 100%; background-color: rgb(0, 0, 0);" onclick="startSensor();" id="sensorrequest"><p style="color: rgb(0, 0, 255);">センサーの有効化</p></div>';
         $('body').prepend(banner);
       } else {
-        //. Android または iOS 13 未満の場合、
-        //. DeviceOrientationEvent オブジェクトが有効な場合のみ、deviceorientation イベント発生時に deviceOrientaion 関数がハンドリングするよう登録
+        // Android または iOS 13 未満の場合、
+        // DeviceOrientationEvent オブジェクトが有効な場合のみ、deviceorientation イベント発生時に deviceOrientation 関数がハンドリングするよう登録
         window.addEventListener("deviceorientation", deviceOrientation);
       }
     }
 
-    //. deviceorientation イベントハンドラ
+    // deviceorientation イベントハンドラ
     function deviceOrientation(e) {
-      //. 通常の処理を無効にする
+      // 通常の処理を無効にする
       e.preventDefault();
 
-      //. スマホの向きを取得
-      var dir = e.alpha;   //. 北極方向に対する向きの角度
-      var fb = e.beta;      //. 前後の傾き角度
-      var lr = e.gamma;  //. 左右の傾き角度
+      // スマホの向きを取得
+      var dir = e.alpha;   // 北極方向に対する向きの角度
+      var fb = e.beta;      // 前後の傾き角度
+      var lr = e.gamma;  // 左右の傾き角度
 
-      //. 値を HTML 要素に表示
+      // 値を HTML 要素に表示
       document.getElementById("dir").innerHTML = dir.toFixed(2);
       document.getElementById("fb").innerHTML = fb.toFixed(2);
       document.getElementById("lr").innerHTML = lr.toFixed(2);
@@ -74,14 +76,16 @@
     // 加速度センサの値を取得
     function updateAcceleration() {
       // 加速度センサの値を取得
-      var x = window.accelerometer.x;
-      var y = window.accelerometer.y;
-      var z = window.accelerometer.z;
+      if (window.DeviceMotionEvent) {
+        var x = event.accelerationIncludingGravity.x;
+        var y = event.accelerationIncludingGravity.y;
+        var z = event.accelerationIncludingGravity.z;
 
-      // 値を HTML 要素に表示
-      document.getElementById("x").innerHTML = x.toFixed(2);
-      document.getElementById("y").innerHTML = y.toFixed(2);
-      document.getElementById("z").innerHTML = z.toFixed(2);
+        // 値を HTML 要素に表示
+        document.getElementById("x").innerHTML = x.toFixed(2);
+        document.getElementById("y").innerHTML = y.toFixed(2);
+        document.getElementById("z").innerHTML = z.toFixed(2);
+      }
     }
   </script>
 </body>
