--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
     function updateAcceleration() {
       // 加速度センサの値を取得
       if (window.DeviceMotionEvent) {
-        var x   = e.accelerationIncludingGravity.x;
-	      var y   = e.accelerationIncludingGravity.y;
-	      var z   = e.accelerationIncludingGravity.z;
-
+        var x   = event.accelerationIncludingGravity.x;
+	      var y   = event.accelerationIncludingGravity.y;
+	      var z   = event.accelerationIncludingGravity.z;
         // 値を HTML 要素に表示
         document.getElementById("x").innerHTML = x.toFixed(2);
         document.getElementById("y").innerHTML = y.toFixed(2);
