--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1>加速度センサとデバイスの向き</h1>
 
   <div id="accelerometer">
-    <p>X: <span id="x"></span></p>
-    <p>Y: <span id="y"></span></p>
-    <p>Z: <span id="z"></span></p>
+    <p>X: {{document.getElementById("x").innerHTML}}</p>
+    <p>Y: {{document.getElementById("y").innerHTML}}</p>
+    <p>Z: {{document.getElementById("z").innerHTML}}</p>
   </div>
 
   <div id="deviceorientation">
